--- a/style.css
+++ b/style.css
@@ -152,6 +152,26 @@ body {
 
 /*------------------------------------------------------------ Button */
 
+.introButton {
+    font-size: 2em;
+    background-image: linear-gradient(135deg, var(--ci2), var(--ci1));
+    color: var(--bg1);
+    border: 7px solid var(--bg1);
+    padding: .25em 1.25em;
+    box-shadow: .25rem .25rem 1rem var(--ci4);
+    border-radius: 100rem;
+    text-decoration: none;
+    transition: .5s;
+}
+
+.introButton:focus {
+    outline: none;
+}
+
+.introButton:hover {
+    transform: scale(1.1);
+}
+
 .neumorphic-btn {
     border: none;
     padding: 5px 20px;
